File paths fixed

--- a/ew2021/uart_loopback_test.ipynb
+++ b/ew2021/uart_loopback_test.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "hide_input": true,
     "init_cell": true
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "diff_ignore": [
      "outputs/0/text"
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "code_folding": [
      5
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "code_folding": [
      0
@@ -153,7 +153,7 @@
       "\u001b[32mCREATE Module: 'counter_0'\u001b[0m\n",
       "\u001b[32mAdding module with name:\u001b[0m counter_1_1_1_3\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_COUNTER_0_WORKER' \n",
-      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:32 Implicit carry truncate: bitcount[3:], src[4:]\n",
+      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:29 Implicit carry truncate: bitcount[3:], src[4:]\n",
       "============================================================================\n",
       "DONE instancing submodules\n",
       "\u001b[32m========================================================\u001b[0m\n",
@@ -174,38 +174,38 @@
       "============ BULK COLLECT <b> for IdString \"\\bram_2psync_1\" ============\n",
       "============ BULK COLLECT <a> for IdString \"\\bram_2psync_1\" ============\n",
       "============ BULK COLLECT <b> for IdString \"\\bram_2psync_1\" ============\n",
-      "config param ADDR_W = 6\n",
-      "config param DATA_W = 8\n",
+      "config param ADDR = 6\n",
+      "config param DATA = 8\n",
       "\u001b[32mAdding module with name:\u001b[0m bram_2psync\n",
       "============ BULK COLLECT <a> for IdString \"\\bram_2psync\" ============\n",
       "============ BULK COLLECT <b> for IdString \"\\bram_2psync\" ============\n",
       "============ BULK COLLECT <a> for IdString \"\\bram_2psync\" ============\n",
       "============ BULK COLLECT <b> for IdString \"\\bram_2psync\" ============\n",
-      "DEFAULT PARAM ADDR_W = 6\n",
-      "DEFAULT PARAM DATA_W = 16\n",
+      "DEFAULT PARAM ADDR = 6\n",
+      "DEFAULT PARAM DATA = 16\n",
       "\u001b[32m========================================================\u001b[0m\n",
       "\u001b[32mCREATE Module: 'bram_2psync_1'\u001b[0m\n",
       "\u001b[32m========================================================\u001b[0m\n",
       "\u001b[32mCREATE Module: 'clock_div_0'\u001b[0m\n",
       "\u001b[32mAdding module with name:\u001b[0m clock_div_1_1_1_1_10\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_CLOCK_DIV_0_WORKER' \n",
-      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:242 Implicit carry truncate: count16[4:], src[5:]\n",
-      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:246 Implicit carry truncate: counter[16:], src[17:]\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:243 (other) missing assignments, assuming defaults for txen\n",
+      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:239 Implicit carry truncate: count16[4:], src[5:]\n",
+      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:243 Implicit carry truncate: counter[16:], src[17:]\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:240 (other) missing assignments, assuming defaults for txen\n",
       "============================================================================\n",
       "DONE instancing submodules\n",
       "\u001b[32m========================================================\u001b[0m\n",
       "\u001b[32mCREATE Module: 'uart_rx_0'\u001b[0m\n",
       "\u001b[32mAdding module with name:\u001b[0m uart_rx_3_1_1_8_1_1_1_1\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_GENERATE_RXCLK_EN' \n",
-      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:113 Implicit carry truncate: count[4:], src[5:]\n",
+      "\u001b[7;31mTRUNC\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:110 Implicit carry truncate: count[4:], src[5:]\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_MID_SAMPLE' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_FSM' \n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:128 (other) missing assignments, assuming defaults for state\n",
       "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:131 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:134 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:123 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:120 (other) missing assignments, assuming defaults for state\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_SHIFT' \n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:146 (other) missing assignments, assuming defaults for dsr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:143 (other) missing assignments, assuming defaults for dsr\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_ASSIGN0' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_TX_STROBE' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_RX_0_ASSIGN1' \n",
@@ -218,10 +218,10 @@
       "\u001b[32mCREATE Module: 'uart_tx_0'\u001b[0m\n",
       "\u001b[32mAdding module with name:\u001b[0m uart_tx_1_8_1_1_1_1_1_1\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_TX_0_FSM' \n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:62 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:51 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:51 (default) missing assignments, assuming defaults dsr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:51 (default) missing assignments, assuming defaults advance\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:59 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:48 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:48 (default) missing assignments, assuming defaults dsr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: /home/pyosys/work/myhdl-synthesis/examples/cores/uart.py:48 (default) missing assignments, assuming defaults advance\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_TX_0_SHIFT' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_CORE_0_UART_TX_0_ASSIGN0' \n",
       "============================================================================\n",
@@ -296,18 +296,18 @@
       "Member stat_rxdata already instanced\n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_ASSIGN' \n",
       "CONVERT_RTL tree >>>>>> 'UART_TRANSLATOR_UART_LB_TRANSLATE' \n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:35 (other) missing assignments, assuming defaults for uart_data\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:35 (other) missing assignments, assuming defaults for uctrl_select_uart_rxr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:35 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:40 (other) missing assignments, assuming defaults for uctrl_uart_txr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:40 (other) missing assignments, assuming defaults for uctrl_select_uart_txr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:40 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:48 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (default) missing assignments, assuming defaults uart_data\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_select_uart_rxr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (other) missing assignments, assuming defaults for state\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_uart_txr\n",
-      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-3-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_select_uart_txr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:35 (other) missing assignments, assuming defaults for uart_data\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:35 (other) missing assignments, assuming defaults for uctrl_select_uart_rxr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:35 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:40 (other) missing assignments, assuming defaults for uctrl_uart_txr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:40 (other) missing assignments, assuming defaults for uctrl_select_uart_txr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:40 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:48 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (default) missing assignments, assuming defaults uart_data\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_select_uart_rxr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (other) missing assignments, assuming defaults for state\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_uart_txr\n",
+      "\u001b[7;31mIMPLICIT_WARNING\u001b[0m: <ipython-input-5-7ffe11467978>:34 (default) missing assignments, assuming defaults uctrl_select_uart_txr\n",
       "============================================================================\n",
       "++++++++ uart_core_0: uart_core_1_1_1_1 (Module) ++++++++\n",
       "DONE instancing submodules\n"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "hide_input": false,
     "scrolled": true,
@@ -1146,10 +1146,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.files.Source at 0x7fd2e9ef5be0>"
+       "<graphviz.files.Source at 0x7f891db5a908>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "code_folding": [
      10,
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
