--- a/index.ipynb
+++ b/index.ipynb
@@ -42,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction\n",
+    "## Further notes\n",
     "\n",
     "### Simulation issues\n",
     "\n",
@@ -179,7 +179,7 @@
    "source": [
     "## MyHDL support\n",
     "\n",
-    "Direct (experimental) Synthesis through MyHDL is featured by the [jupyosys](https://section5.ch/index.php/2020/03/20/myhdl-and-pyosys-direct-synthesis-using-python/) project, see separate Binder:\n",
+    "Direct (experimental) synthesis through MyHDL is featured by the [jupyosys](https://section5.ch/index.php/2020/03/20/myhdl-and-pyosys-direct-synthesis-using-python/) project, see also separate Binder:\n",
     "\n",
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/hackfin/myhdl.git/jupyosys?filepath=src%2Fmyhdl%2Fmyhdl-yosys%2Fexample%2Fipynb%2Findex.ipynb)\n"
    ]
@@ -217,9 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33m  The script chardetect is installed in '/home/pyosys/.local/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n",
+      "\u001b[33m  The scripts git-nbdiffdriver, git-nbdifftool, git-nbmergedriver, git-nbmergetool, hg-nbdiff, hg-nbdiffweb, hg-nbmerge, hg-nbmergeweb, nbdiff, nbdiff-web, nbdime, nbmerge, nbmerge-web and nbshow are installed in '/home/pyosys/.local/bin' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "! pip3 install pytest-notebook >/dev/null"
    ]
@@ -233,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -296,15 +307,16 @@
       "platform linux -- Python 3.7.3, pytest-3.10.1, py-1.7.0, pluggy-0.8.0 -- /usr/bin/python3\n",
       "cachedir: .pytest_cache\n",
       "NB force regen: True\n",
-      "rootdir: /tmp/tmpz0y_hlvw, inifile: pytest.ini\n",
+      "rootdir: /tmp/tmpt_zw4l7i, inifile: pytest.ini\n",
       "plugins: notebook-0.6.1\n",
-      "\u001b[1mcollecting ... \u001b[0mcollected 3 items\n",
+      "\u001b[1mcollecting ... \u001b[0mcollected 4 items\n",
       "\n",
-      "test_ipycell.py::test_generic[sync_logic.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                   [ 33%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[cosim.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                        [ 66%]\u001b[0m\n",
-      "test_ipycell.py::test_generic[blackbox.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                     [100%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[ghdl_module_tests.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m            [ 25%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[ghdlsim_blink.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m                [ 50%]\u001b[0m\n",
+      "test_ipycell.py::test_generic[memory_wrapped_init.ipynb] \u001b[32mPASSED\u001b[0m\u001b[36m          [ 75%]\u001b[0m\n",
+      "test_ipycell.py::test_fixme[memory.ipynb] \u001b[33mxfail\u001b[0m\u001b[36m                          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m\u001b[1m========================== 3 passed in 63.48 seconds ===========================\u001b[0m\n"
+      "\u001b[32m\u001b[1m===================== 3 passed, 1 xfailed in 40.91 seconds =====================\u001b[0m\n"
      ]
     }
    ],
@@ -330,26 +342,28 @@
     "import importlib_resources\n",
     "\n",
     "sys.path.append(\"/home/pyosys/work\")\n",
+    "sys.path.append(\"/home/pyosys/work/examples\")\n",
     "\n",
     "import pytest\n",
-    "import ew2021\n",
+    "import tests\n",
     "import tempfile\n",
     "\n",
-    "VERIFIED  = [ \"sync_logic.ipynb\", \"cosim.ipynb\", \"blackbox.ipynb\" ]\n",
-    "# VERIFIED += [  \"uart_loopback_test.ipynb\" ]\n",
+    "        \n",
+    "VERIFIED  = [ \"ghdl_module_tests.ipynb\", \"ghdlsim_blink.ipynb\", \"memory_wrapped_init.ipynb\" ]\n",
+    "\n",
+    "KNOWN_TO_FAIL = [ \"memory.ipynb\" ]\n",
     "\n",
     "@pytest.mark.parametrize(\"uut\", VERIFIED)\n",
     "def test_generic(nb_regression, uut):\n",
-    "    with importlib_resources.path(ew2021, uut) as path:\n",
-    "        nb_regression.check(str(path))                "
+    "    with importlib_resources.path(tests, uut) as path:\n",
+    "        nb_regression.check(str(path))                \n",
+    "\n",
+    "@pytest.mark.xfail \n",
+    "@pytest.mark.parametrize(\"uut\", KNOWN_TO_FAIL)\n",
+    "def test_fixme(nb_regression, uut):\n",
+    "    with importlib_resources.path(tests, uut) as path:\n",
+    "        nb_regression.check(str(path))                              "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
