--- a/xml_devdesc.ipynb
+++ b/xml_devdesc.ipynb
@@ -30,152 +30,82 @@
       "Building dependency tree       \n",
       "Reading state information... Done\n",
       "The following additional packages will be installed:\n",
-      "  libpython-stdlib libpython2-stdlib libpython2.7 libpython2.7-minimal\n",
-      "  libpython2.7-stdlib libxslt1.1 python python-backports.functools-lru-cache\n",
-      "  python-bs4 python-chardet python-html5lib python-lxml python-minimal\n",
-      "  python-pkg-resources python-six python-soupsieve python-webencodings python2\n",
-      "  python2-minimal python2.7 python2.7-minimal\n",
+      "  libxslt1.1 python-backports.functools-lru-cache python-bs4 python-chardet\n",
+      "  python-html5lib python-lxml python-pkg-resources python-six python-soupsieve\n",
+      "  python-webencodings\n",
       "Suggested packages:\n",
-      "  python-doc python-tk python-genshi python-lxml-dbg python-lxml-doc\n",
-      "  python-setuptools python2-doc python2.7-doc binfmt-support\n",
+      "  python-genshi python-lxml-dbg python-lxml-doc python-setuptools\n",
       "The following NEW packages will be installed:\n",
-      "  gensoc libpython-stdlib libpython2-stdlib libpython2.7 libpython2.7-minimal\n",
-      "  libpython2.7-stdlib libxslt1.1 python python-backports.functools-lru-cache\n",
-      "  python-bs4 python-chardet python-html5lib python-lxml python-minimal\n",
-      "  python-pkg-resources python-six python-soupsieve python-webencodings python2\n",
-      "  python2-minimal python2.7 python2.7-minimal xsltproc\n",
-      "0 upgraded, 23 newly installed, 0 to remove and 3 not upgraded.\n",
-      "Need to get 7245 kB of archives.\n",
-      "After this operation, 27.5 MB of additional disk space will be used.\n",
-      "Get:2 http://deb.debian.org/debian buster/main amd64 libpython2.7-minimal amd64 2.7.16-2+deb10u1 [395 kB]\n",
-      "Get:3 http://deb.debian.org/debian buster/main amd64 python2.7-minimal amd64 2.7.16-2+deb10u1 [1369 kB]\n",
-      "Get:1 https://section5.ch/debian buster/non-free amd64 gensoc amd64 0.23-2 [51.0 kB]\n",
-      "Get:4 http://deb.debian.org/debian buster/main amd64 python2-minimal amd64 2.7.16-1 [41.4 kB]\n",
-      "Get:5 http://deb.debian.org/debian buster/main amd64 python-minimal amd64 2.7.16-1 [21.0 kB]\n",
-      "Get:6 http://deb.debian.org/debian buster/main amd64 libpython2.7-stdlib amd64 2.7.16-2+deb10u1 [1912 kB]\n",
-      "Get:7 http://deb.debian.org/debian buster/main amd64 python2.7 amd64 2.7.16-2+deb10u1 [305 kB]\n",
-      "Get:8 http://deb.debian.org/debian buster/main amd64 libpython2-stdlib amd64 2.7.16-1 [20.8 kB]\n",
-      "Get:9 http://deb.debian.org/debian buster/main amd64 libpython-stdlib amd64 2.7.16-1 [20.8 kB]\n",
-      "Get:10 http://deb.debian.org/debian buster/main amd64 python2 amd64 2.7.16-1 [41.6 kB]\n",
-      "Get:11 http://deb.debian.org/debian buster/main amd64 python amd64 2.7.16-1 [22.8 kB]\n",
-      "Get:12 http://deb.debian.org/debian buster/main amd64 libpython2.7 amd64 2.7.16-2+deb10u1 [1036 kB]\n",
-      "Get:13 http://deb.debian.org/debian buster/main amd64 libxslt1.1 amd64 1.1.32-2.2~deb10u1 [237 kB]\n",
-      "Get:14 http://deb.debian.org/debian buster/main amd64 python-backports.functools-lru-cache all 1.5-3 [6704 B]\n",
-      "Get:15 http://deb.debian.org/debian buster/main amd64 python-soupsieve all 1.8+dfsg-1 [27.6 kB]\n",
-      "Get:16 http://deb.debian.org/debian buster/main amd64 python-bs4 all 4.7.1-1 [94.2 kB]\n",
-      "Get:17 http://deb.debian.org/debian buster/main amd64 python-pkg-resources all 40.8.0-1 [182 kB]\n",
-      "Get:18 http://deb.debian.org/debian buster/main amd64 python-chardet all 3.0.4-3 [80.6 kB]\n",
-      "Get:19 http://deb.debian.org/debian buster/main amd64 python-six all 1.12.0-1 [15.7 kB]\n",
-      "Get:20 http://deb.debian.org/debian buster/main amd64 python-webencodings all 0.5.1-1 [10.7 kB]\n",
-      "Get:21 http://deb.debian.org/debian buster/main amd64 python-html5lib all 1.0.1-1 [89.8 kB]\n",
-      "Get:22 http://deb.debian.org/debian buster/main amd64 python-lxml amd64 4.3.2-1 [1144 kB]\n",
-      "Get:23 http://deb.debian.org/debian buster/main amd64 xsltproc amd64 1.1.32-2.2~deb10u1 [122 kB]\n",
-      "Fetched 7245 kB in 2s (3523 kB/s)\n",
+      "  gensoc libxslt1.1 python-backports.functools-lru-cache python-bs4\n",
+      "  python-chardet python-html5lib python-lxml python-pkg-resources python-six\n",
+      "  python-soupsieve python-webencodings xsltproc\n",
+      "0 upgraded, 12 newly installed, 0 to remove and 38 not upgraded.\n",
+      "Need to get 2061 kB of archives.\n",
+      "After this operation, 7390 kB of additional disk space will be used.\n",
+      "Get:1 http://deb.debian.org/debian buster/main amd64 libxslt1.1 amd64 1.1.32-2.2~deb10u1 [237 kB]\n",
+      "Get:2 http://security.debian.org/debian-security buster/updates/main amd64 python-lxml amd64 4.3.2-1+deb10u2 [1144 kB]\n",
+      "Get:4 http://deb.debian.org/debian buster/main amd64 python-backports.functools-lru-cache all 1.5-3 [6704 B]\n",
+      "Get:5 http://deb.debian.org/debian buster/main amd64 python-soupsieve all 1.8+dfsg-1 [27.6 kB]\n",
+      "Get:6 http://deb.debian.org/debian buster/main amd64 python-bs4 all 4.7.1-1 [94.2 kB]\n",
+      "Get:7 http://deb.debian.org/debian buster/main amd64 python-pkg-resources all 40.8.0-1 [182 kB]\n",
+      "Get:8 http://deb.debian.org/debian buster/main amd64 python-chardet all 3.0.4-3 [80.6 kB]\n",
+      "Get:9 http://deb.debian.org/debian buster/main amd64 python-six all 1.12.0-1 [15.7 kB]\n",
+      "Get:10 http://deb.debian.org/debian buster/main amd64 python-webencodings all 0.5.1-1 [10.7 kB]\n",
+      "Get:11 http://deb.debian.org/debian buster/main amd64 python-html5lib all 1.0.1-1 [89.8 kB]\n",
+      "Get:12 http://deb.debian.org/debian buster/main amd64 xsltproc amd64 1.1.32-2.2~deb10u1 [122 kB]\n",
+      "Get:3 https://section5.ch/debian buster/non-free amd64 gensoc amd64 0.23-2 [51.0 kB]\n",
+      "Fetched 2061 kB in 1s (3674 kB/s)\n",
       "debconf: delaying package configuration, since apt-utils is not installed\n",
-      "Selecting previously unselected package libpython2.7-minimal:amd64.\n",
-      "(Reading database ... 22385 files and directories currently installed.)\n",
-      "Preparing to unpack .../0-libpython2.7-minimal_2.7.16-2+deb10u1_amd64.deb ...\n",
-      "Unpacking libpython2.7-minimal:amd64 (2.7.16-2+deb10u1) ...\n",
-      "Selecting previously unselected package python2.7-minimal.\n",
-      "Preparing to unpack .../1-python2.7-minimal_2.7.16-2+deb10u1_amd64.deb ...\n",
-      "Unpacking python2.7-minimal (2.7.16-2+deb10u1) ...\n",
-      "Selecting previously unselected package python2-minimal.\n",
-      "Preparing to unpack .../2-python2-minimal_2.7.16-1_amd64.deb ...\n",
-      "Unpacking python2-minimal (2.7.16-1) ...\n",
-      "Selecting previously unselected package python-minimal.\n",
-      "Preparing to unpack .../3-python-minimal_2.7.16-1_amd64.deb ...\n",
-      "Unpacking python-minimal (2.7.16-1) ...\n",
-      "Selecting previously unselected package libpython2.7-stdlib:amd64.\n",
-      "Preparing to unpack .../4-libpython2.7-stdlib_2.7.16-2+deb10u1_amd64.deb ...\n",
-      "Unpacking libpython2.7-stdlib:amd64 (2.7.16-2+deb10u1) ...\n",
-      "Selecting previously unselected package python2.7.\n",
-      "Preparing to unpack .../5-python2.7_2.7.16-2+deb10u1_amd64.deb ...\n",
-      "Unpacking python2.7 (2.7.16-2+deb10u1) ...\n",
-      "Selecting previously unselected package libpython2-stdlib:amd64.\n",
-      "Preparing to unpack .../6-libpython2-stdlib_2.7.16-1_amd64.deb ...\n",
-      "Unpacking libpython2-stdlib:amd64 (2.7.16-1) ...\n",
-      "Selecting previously unselected package libpython-stdlib:amd64.\n",
-      "Preparing to unpack .../7-libpython-stdlib_2.7.16-1_amd64.deb ...\n",
-      "Unpacking libpython-stdlib:amd64 (2.7.16-1) ...\n",
-      "Setting up libpython2.7-minimal:amd64 (2.7.16-2+deb10u1) ...\n",
-      "Setting up python2.7-minimal (2.7.16-2+deb10u1) ...\n",
-      "Linking and byte-compiling packages for runtime python2.7...\n",
-      "Setting up python2-minimal (2.7.16-1) ...\n",
-      "Selecting previously unselected package python2.\n",
-      "(Reading database ... 23144 files and directories currently installed.)\n",
-      "Preparing to unpack .../python2_2.7.16-1_amd64.deb ...\n",
-      "Unpacking python2 (2.7.16-1) ...\n",
-      "Setting up python-minimal (2.7.16-1) ...\n",
-      "Selecting previously unselected package python.\n",
-      "(Reading database ... 23172 files and directories currently installed.)\n",
-      "Preparing to unpack .../00-python_2.7.16-1_amd64.deb ...\n",
-      "Unpacking python (2.7.16-1) ...\n",
-      "Selecting previously unselected package libpython2.7:amd64.\n",
-      "Preparing to unpack .../01-libpython2.7_2.7.16-2+deb10u1_amd64.deb ...\n",
-      "Unpacking libpython2.7:amd64 (2.7.16-2+deb10u1) ...\n",
       "Selecting previously unselected package libxslt1.1:amd64.\n",
-      "Preparing to unpack .../02-libxslt1.1_1.1.32-2.2~deb10u1_amd64.deb ...\n",
+      "(Reading database ... 38363 files and directories currently installed.)\n",
+      "Preparing to unpack .../00-libxslt1.1_1.1.32-2.2~deb10u1_amd64.deb ...\n",
       "Unpacking libxslt1.1:amd64 (1.1.32-2.2~deb10u1) ...\n",
       "Selecting previously unselected package python-backports.functools-lru-cache.\n",
-      "Preparing to unpack .../03-python-backports.functools-lru-cache_1.5-3_all.deb ...\n",
+      "Preparing to unpack .../01-python-backports.functools-lru-cache_1.5-3_all.deb ...\n",
       "Unpacking python-backports.functools-lru-cache (1.5-3) ...\n",
       "Selecting previously unselected package python-soupsieve.\n",
-      "Preparing to unpack .../04-python-soupsieve_1.8+dfsg-1_all.deb ...\n",
+      "Preparing to unpack .../02-python-soupsieve_1.8+dfsg-1_all.deb ...\n",
       "Unpacking python-soupsieve (1.8+dfsg-1) ...\n",
       "Selecting previously unselected package python-bs4.\n",
-      "Preparing to unpack .../05-python-bs4_4.7.1-1_all.deb ...\n",
+      "Preparing to unpack .../03-python-bs4_4.7.1-1_all.deb ...\n",
       "Unpacking python-bs4 (4.7.1-1) ...\n",
       "Selecting previously unselected package python-pkg-resources.\n",
-      "Preparing to unpack .../06-python-pkg-resources_40.8.0-1_all.deb ...\n",
+      "Preparing to unpack .../04-python-pkg-resources_40.8.0-1_all.deb ...\n",
       "Unpacking python-pkg-resources (40.8.0-1) ...\n",
       "Selecting previously unselected package python-chardet.\n",
-      "Preparing to unpack .../07-python-chardet_3.0.4-3_all.deb ...\n",
+      "Preparing to unpack .../05-python-chardet_3.0.4-3_all.deb ...\n",
       "Unpacking python-chardet (3.0.4-3) ...\n",
       "Selecting previously unselected package python-six.\n",
-      "Preparing to unpack .../08-python-six_1.12.0-1_all.deb ...\n",
+      "Preparing to unpack .../06-python-six_1.12.0-1_all.deb ...\n",
       "Unpacking python-six (1.12.0-1) ...\n",
       "Selecting previously unselected package python-webencodings.\n",
-      "Preparing to unpack .../09-python-webencodings_0.5.1-1_all.deb ...\n",
+      "Preparing to unpack .../07-python-webencodings_0.5.1-1_all.deb ...\n",
       "Unpacking python-webencodings (0.5.1-1) ...\n",
       "Selecting previously unselected package python-html5lib.\n",
-      "Preparing to unpack .../10-python-html5lib_1.0.1-1_all.deb ...\n",
+      "Preparing to unpack .../08-python-html5lib_1.0.1-1_all.deb ...\n",
       "Unpacking python-html5lib (1.0.1-1) ...\n",
       "Selecting previously unselected package python-lxml:amd64.\n",
-      "Preparing to unpack .../11-python-lxml_4.3.2-1_amd64.deb ...\n",
-      "Unpacking python-lxml:amd64 (4.3.2-1) ...\n",
+      "Preparing to unpack .../09-python-lxml_4.3.2-1+deb10u2_amd64.deb ...\n",
+      "Unpacking python-lxml:amd64 (4.3.2-1+deb10u2) ...\n",
       "Selecting previously unselected package xsltproc.\n",
-      "Preparing to unpack .../12-xsltproc_1.1.32-2.2~deb10u1_amd64.deb ...\n",
+      "Preparing to unpack .../10-xsltproc_1.1.32-2.2~deb10u1_amd64.deb ...\n",
       "Unpacking xsltproc (1.1.32-2.2~deb10u1) ...\n",
       "Selecting previously unselected package gensoc.\n",
-      "Preparing to unpack .../13-gensoc_0.23-2_amd64.deb ...\n",
+      "Preparing to unpack .../11-gensoc_0.23-2_amd64.deb ...\n",
       "Unpacking gensoc (0.23-2) ...\n",
-      "Setting up libpython2.7-stdlib:amd64 (2.7.16-2+deb10u1) ...\n",
-      "Setting up libxslt1.1:amd64 (1.1.32-2.2~deb10u1) ...\n",
-      "Setting up libpython2.7:amd64 (2.7.16-2+deb10u1) ...\n",
-      "Setting up python2.7 (2.7.16-2+deb10u1) ...\n",
-      "Setting up libpython2-stdlib:amd64 (2.7.16-1) ...\n",
-      "Setting up xsltproc (1.1.32-2.2~deb10u1) ...\n",
-      "Setting up python2 (2.7.16-1) ...\n",
-      "Setting up libpython-stdlib:amd64 (2.7.16-1) ...\n",
-      "Setting up python (2.7.16-1) ...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setting up python-lxml:amd64 (4.3.2-1) ...\n",
-      "Setting up gensoc (0.23-2) ...\n",
       "Setting up python-pkg-resources (40.8.0-1) ...\n",
       "Setting up python-six (1.12.0-1) ...\n",
       "Setting up python-backports.functools-lru-cache (1.5-3) ...\n",
+      "Setting up libxslt1.1:amd64 (1.1.32-2.2~deb10u1) ...\n",
       "Setting up python-chardet (3.0.4-3) ...\n",
       "Setting up python-webencodings (0.5.1-1) ...\n",
+      "Setting up python-lxml:amd64 (4.3.2-1+deb10u2) ...\n",
+      "Setting up gensoc (0.23-2) ...\n",
       "Setting up python-html5lib (1.0.1-1) ...\n",
+      "Setting up xsltproc (1.1.32-2.2~deb10u1) ...\n",
       "Setting up python-soupsieve (1.8+dfsg-1) ...\n",
       "Setting up python-bs4 (4.7.1-1) ...\n",
-      "Processing triggers for libc-bin (2.28-10) ...\n",
-      "Processing triggers for mime-support (3.62) ...\n"
+      "Processing triggers for libc-bin (2.28-10) ...\n"
      ]
     }
    ],
@@ -192,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +711,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download [output/test_sys_decode.vhdl](output/test_sys_decode.vhdl)"
+    "Download [output/test_sys_decode.vhdl](output/test_sys_decode.vhdl) or open in the editor: [test_sys_decode.vhdl](/edit/work/output/test_sys_decode.vhdl).\n",
+    "\n",
+    "(**Note**: not working within a Binder service, use `File->Open` instead)"
    ]
   },
   {
@@ -795,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're gonna open it in the syntax-sensitive editor (note: not working within a Binder service, use `File->Open` instead): [test_register.h](/edit/work/hdlpg/output/test_register.h)"
+    "Opening this file in the syntax-sensitive editor: [test_register.h](/edit/work/output/test_register.h)"
    ]
   }
  ],
