--- a/ew2021/hwprog_setup.ipynb
+++ b/ew2021/hwprog_setup.ipynb
@@ -22,8 +22,8 @@
       "remote: Enumerating objects: 76, done.\u001b[K\n",
       "remote: Counting objects: 100% (76/76), done.\u001b[K\n",
       "remote: Compressing objects: 100% (76/76), done.\u001b[K\n",
-      "remote: Total 812 (delta 45), reused 0 (delta 0), pack-reused 736\n",
-      "Receiving objects: 100% (812/812), 1.95 MiB | 5.99 MiB/s, done.\n",
+      "remote: Total 812 (delta 45), reused 0 (delta 0), pack-reused 736\u001b[K\n",
+      "Receiving objects: 100% (812/812), 1.95 MiB | 6.04 MiB/s, done.\n",
       "Resolving deltas: 100% (572/572), done.\n"
      ]
     }
@@ -95,7 +95,7 @@
       "Get:5 http://deb.debian.org/debian buster/main amd64 libusb-0.1-4 amd64 2:0.1.12-32 [23.4 kB]\n",
       "Get:6 http://deb.debian.org/debian buster/main amd64 libjim0.77 amd64 0.77+dfsg0-3 [116 kB]\n",
       "Get:7 http://deb.debian.org/debian buster/main amd64 openocd amd64 0.10.0-5 [2457 kB]\n",
-      "Fetched 2710 kB in 1s (4777 kB/s) \n",
+      "Fetched 2710 kB in 0s (6051 kB/s) \n",
       "debconf: delaying package configuration, since apt-utils is not installed\n",
       "Selecting previously unselected package libusb-1.0-0:amd64.\n",
       "(Reading database ... 37464 files and directories currently installed.)\n",
